@@ -17,13 +17,13 @@ version
 </h1>
 <h3>A simple drawing program for children</h3>
 
-<p>Copyright 2003 by Bill Kendrick<br>
+<p>Copyright 2004 by Bill Kendrick<br>
 New Breed Software</p>
 
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>June 14, 2002 - December 26, 2003</p>
+<p>June 14, 2002 - January 14, 2004</p>
 </center>
 
 <hr size=2 noshade>
